Added footer and contact link.  started adding title to projects.

--- a/index.html
+++ b/index.html
@@ -40,14 +40,15 @@
 
 <!-- Hero Banner -->
 
-    <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 ">
-      <div class="container text-xs-left p-t-6">
-        <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
-        <p class="lead col-md-8 col-xl-6 p-l-0 ">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
+    <div class="hero">
+      <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 ">
+        <div class="container text-xs-left p-t-3" id="home">
+          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
+          <p class="lead col-md-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
+        </div>
+
       </div>
-
     </div>
-
 <!-- /Hero Banner -->
 <!-- container -->
 
@@ -62,6 +63,7 @@
             <img class="card-img img-fluid" src="img/proj_001.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
               <h4 class="card-title">Project name</h4>
+              <h4 class="card-sub-title">Client</h4>
             </div>
 
           </div>
@@ -73,7 +75,8 @@
             <a href="http://www.google.co.uk">
             <img class="card-img img-fluid" src="img/proj_002.jpg" alt="Card image" width="100%" href>
             <div class="card-img-overlay">
-              <h4 class="card-title text-xs-center">Project name</h4>
+              <h4 class="card-title">Project name</h4>
+              <h4 class="card-sub-title">Client</h4>
             </div>
 
           </div>
@@ -85,6 +88,7 @@
             <img class="card-img img-fluid" src="img/proj_003.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
               <h4 class="card-title">Project name</h4>
+              <h4 class="card-sub-title">Client</h4>
             </div>
 
           </div>
@@ -93,6 +97,16 @@
 
       </div>
 <!-- /projects -->
+<!-- footer -->
+      <div class="footer">
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h5 class="contact p-b-2">Give me a shout!</h5>
+            <p class="lead email"><a href="mailto:aidanftwalker@googlemail.com?Subject=Hello%20again" target="_top">aidanftwalker@gmail.com</a></p>
+          </div>
+        </div>
+      </div>
+<!-- /footer -->
     </div>
 <!-- /container -->
     <!-- jQuery first, then Bootstrap JS. -->
