changed background and effects to navy blue, added new images and corrected font size and weights

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/custom.css">
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="100">
 <!-- Navigation -->
 
     <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
@@ -52,9 +52,9 @@
 <!-- /Hero Banner -->
 <!-- container -->
 
-    <div class="container">
+    <div class="container" id="projects">
 <!-- projects -->
-      <div id="projects" class="row">
+      <div class="row">
         <h1 class="p-y-2 text-xs-center text-md-left sec-title">Recent Projects</h1>
 
         <div class="col-md-4">
@@ -62,8 +62,8 @@
           <div class="card">
             <img class="card-img img-fluid" src="img/proj_001.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
-              <h4 class="card-title">Project name</h4>
-              <h4 class="card-sub-title">Client</h4>
+              <h4 class="card-title">Mobile Health App</h4>
+              <h4 class="card-sub-title">AXA</h4>
             </div>
 
           </div>
@@ -75,8 +75,8 @@
             <a href="http://www.google.co.uk">
             <img class="card-img img-fluid" src="img/proj_002.jpg" alt="Card image" width="100%" href>
             <div class="card-img-overlay">
-              <h4 class="card-title">Project name</h4>
-              <h4 class="card-sub-title">Client</h4>
+              <h4 class="card-title">Site Diary</h4>
+              <h4 class="card-sub-title">Sir Robert McAlpine</h4>
             </div>
 
           </div>
@@ -87,8 +87,8 @@
           <div class="card">
             <img class="card-img img-fluid" src="img/proj_003.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
-              <h4 class="card-title">Project name</h4>
-              <h4 class="card-sub-title">Client</h4>
+              <h4 class="card-title">Private Health Care</h4>
+              <h4 class="card-sub-title">Westfield Health</h4>
             </div>
 
           </div>
