--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/custom.css">
   </head>
-  <body data-spy="scroll" data-target=".navbar" data-offset="100">
+  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
 <!-- Navigation -->
 
     <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
@@ -21,8 +21,8 @@
         </button>
         <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
           <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#home">Home</a>
+            <li class="nav-item">
+              <a class="nav-link" href="#home">Home</a> <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
@@ -42,7 +42,7 @@
 
     <div class="hero">
       <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 ">
-        <div class="container text-xs-left p-t-3" id="home">
+        <div class="container text-xs-left p-t-3">
           <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
           <p class="lead col-md-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
         </div>
@@ -52,9 +52,9 @@
 <!-- /Hero Banner -->
 <!-- container -->
 
-    <div class="container" id="projects">
+    <div class="container" >
 <!-- projects -->
-      <div class="row">
+      <div id="projects" class="row p-t-2">
         <h1 class="p-y-2 text-xs-center text-md-left sec-title">Recent Projects</h1>
 
         <div class="col-md-4">
