--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about/">About</a>
+              <a class="nav-link" href="#about">About</a>
             </li>
             <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
           </ul>
