adjusted the title on the home to page to resize on smaller devices

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
 
     <div class="hero">
       <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 ">
-        <div class="container text-xs-left p-t-3">
+        <!-- medium view -->
+        <div class="container text-xs-left p-t-3 hidden-sm-down">
           <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
           <p class="lead col-md-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
+        </div>
+        <!-- sm view -->
+        <div class="container text-xs-left p-t-3 hidden-md-up">
+          <h2 class="title-small col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h2>
+          <p class="lead col-mdx-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
         </div>
 
       </div>
