--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
           <ul class="nav navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="www.terminaidan.github.io">Back</a>
+              <a class="nav-link" href="/">Back</a>
             </li>
             <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
           </ul>
