--- a/about/index.html
+++ b/about/index.html
@@ -14,21 +14,27 @@
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
 <!-- Navigation -->
 
-    <nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
-      <div class="container">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-          &#9776;
-        </button>
-        <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-          <ul class="nav navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Back</a>
-            </li>
-            <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
+  <div class="container">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+      &#9776;
+    </button>
+    <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/about/">About</a> <span class="sr-only">(current)</span></a>
+        </li>
+        <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
+      </ul>
+    </div>
+  </div>
+</nav>>
 
 <!-- /Navigation -->
 
