--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a> 
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
@@ -41,7 +41,7 @@
 <!-- Hero Banner -->
 
     <div class="hero">
-      <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 ">
+      <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 about ">
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
           <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
