--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="../css/custom.css">
   </head>
   <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
 <!-- Navigation -->
@@ -40,17 +40,16 @@
 
 <!-- Hero Banner -->
 
-    <div class="hero">
-      <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0 about ">
+    <div class="about-hero">
+      <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0">
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
-          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h1>
-          <p class="lead col-md-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
+          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About -</h1>
+          <p class="lead col-md-8 col-xl-6 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor sem diam, vitae ullamcorper mauris porta ut. Aliquam accumsan, turpis eget <a href="http://www.twitter.com/terminaidan">Twitter</a> efficitur, mauris metus euismod quam, vel <a href="http://www.instagram.com/aidanftwalker" >Instagram</a> ante dui eu enim. <a href ="http://www.linkedin.com">Linkedin</a> eu purus vel dui rhoncus auctor eu vel sem. Cras finibus nec arcu nec condimentum..</p>
         </div>
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
-          <h2 class="title-small col-sm-12 p-l-0 p-b-2">Aidan Walker<br>UI / UX Designer</h2>
-          <p class="lead col-mdx-8 col-xl-6 p-l-0">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
+          <!-- Copy content about to here -->
         </div>
 
       </div>
@@ -60,8 +59,8 @@
 
     <div class="container" >
 <!-- projects -->
-      <div id="projects" class="row p-t-2">
-        <h1 class="p-y-2 text-xs-center text-md-left sec-title">Recent Projects</h1>
+      <div id="projects" class="row p-t-2 clients">
+        <h1 class="p-y-2 text-xs-center text-md-left sec-title">Clients</h1>
 
         <div class="col-md-4">
 
