added new about content. new BG image

--- a/about/index.html
+++ b/about/index.html
@@ -44,12 +44,15 @@
       <div class="jumbotron jumbotron-fluid bg-info vertical-center m-b-0">
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
-          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About -</h1>
-          <p class="lead col-md-8 col-xl-6 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor sem diam, vitae ullamcorper mauris porta ut. Aliquam accumsan, turpis eget <a href="http://www.twitter.com/terminaidan">Twitter</a> efficitur, mauris metus euismod quam, vel <a href="http://www.instagram.com/aidanftwalker" >Instagram</a> ante dui eu enim. <a href ="http://www.linkedin.com">Linkedin</a> eu purus vel dui rhoncus auctor eu vel sem. Cras finibus nec arcu nec condimentum..</p>
+          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About Me -</h1>
+          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
+
         </div>
+
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
-          <!-- Copy content about to here -->
+          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About Me -</h1>
+          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
         </div>
 
       </div>
@@ -60,45 +63,7 @@
     <div class="container" >
 <!-- projects -->
       <div id="projects" class="row p-t-2 clients">
-        <h1 class="p-y-2 text-xs-center text-md-left sec-title">Clients</h1>
-
-        <div class="col-md-4">
-
-          <div class="card">
-            <img class="card-img img-fluid" src="img/proj_001.jpg" alt="Card image" width="100%">
-            <div class="card-img-overlay">
-              <h4 class="card-title">Mobile Health App</h4>
-              <h4 class="card-sub-title">AXA</h4>
-            </div>
-
-          </div>
-
-        </div>
-        <div class="col-md-4">
-
-          <div class="card">
-            <a href="http://www.google.co.uk">
-            <img class="card-img img-fluid" src="img/proj_002.jpg" alt="Card image" width="100%" href>
-            <div class="card-img-overlay">
-              <h4 class="card-title">Site Diary</h4>
-              <h4 class="card-sub-title">Sir Robert McAlpine</h4>
-            </div>
-
-          </div>
-        </a>
-        </div>
-        <div class="col-md-4">
-
-          <div class="card">
-            <img class="card-img img-fluid" src="img/proj_003.jpg" alt="Card image" width="100%">
-            <div class="card-img-overlay">
-              <h4 class="card-title">Private Health Care</h4>
-              <h4 class="card-sub-title">Westfield Health</h4>
-            </div>
-
-          </div>
-
-        </div>
+      
 
       </div>
 <!-- /projects -->
