added client placeholder images and added download cv button (not positioned right)

--- a/about/index.html
+++ b/about/index.html
@@ -51,9 +51,12 @@
 
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
-          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About Me -</h1>
+          <h2 class="title-small col-sm-12 p-l-0 p-b-2">About Me -</h2>
           <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
         </div>
+
+
+
 
       </div>
     </div>
@@ -62,8 +65,13 @@
 
     <div class="container" >
 <!-- projects -->
-      <div id="projects" class="row p-t-2 clients">
-      
+      <div id="projects" class="row">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_01.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_02.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_03.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_04.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_05.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_06.png">
 
       </div>
 <!-- /projects -->
@@ -73,6 +81,8 @@
           <div class="container">
             <h5 class="contact p-b-2">Give me a shout!</h5>
             <p class="lead email"><a href="mailto:aidanftwalker@googlemail.com?Subject=Hello%20again" target="_top">aidanftwalker@gmail.com</a></p>
+
+            <button type="button" class="btn btn-info-outline pull-right">Download CV</button>
           </div>
         </div>
       </div>
