--- a/axa-mha/index.html
+++ b/axa-mha/index.html
@@ -44,14 +44,14 @@
       <div class="jumbotron jumbotron-fluid vertical-center m-b-0">
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
-          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About Me -</h1>
+          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h1>
           <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
 
         </div>
 
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
-          <h2 class="title-small col-sm-12 p-l-0 p-b-2">About Me -</h2>
+          <h2 class="title-small col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h2>
           <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
         </div>
 
@@ -63,17 +63,38 @@
 <!-- /Hero Banner -->
 <!-- container -->
 
-    <div class="container" >
+
 <!-- projects -->
       <div id="projects" class="row">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_01.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_02.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_03.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_04.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_05.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_06.png">
+        <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner  m-r-0" role="listbox">
+            <div class="carousel-item active">
+              <img class="img-fluid full-width" src="../img/car_01.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="img-fluid full-width" src="../img/car_02.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="img-fluid full-width" src="../img/car_03.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="icon-prev" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="icon-next" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
 
       </div>
+    <div class="container" >
 <!-- /projects -->
 <!-- footer -->
       <div class="footer">
