Amended text and fixed the size of the carousel.

--- a/about/index.html
+++ b/about/index.html
@@ -45,14 +45,14 @@
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
           <h1 class="display-3 col-sm-12 p-l-0 p-b-2">About Me -</h1>
-          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
+          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code including HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time lino printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
 
         </div>
 
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
           <h2 class="title-small col-sm-12 p-l-0 p-b-2">About Me -</h2>
-          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
+          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code including HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time lino printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
         </div>
 
 
