--- a/axa-mha/index.html
+++ b/axa-mha/index.html
@@ -22,13 +22,7 @@
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/about/">About</a> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Back</a>
         </li>
         <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
       </ul>
@@ -45,14 +39,14 @@
         <!-- medium view -->
         <div class="container text-xs-left p-t-3 hidden-sm-down">
           <h1 class="display-3 col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h1>
-          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
+          <p class="lead col-md-8 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis semper est, sed tincidunt arcu. Aliquam sodales mauris ac mollis pellentesque. Integer tincidunt lacus eu ullamcorper ornare. Maecenas eu ante vel augue pharetra pulvinar. Praesent lobortis luctus tellus at tincidunt. Sed molestie placerat ornare. <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel orci accumsan lectus porta laoreet vel eu felis. In at libero sapien. Integer a sem eget magna fringilla molestie eget sit amet orci. <br>Aenean elit risus, pellentesque in sagittis eu, auctor sed nunc. Curabitur id mi augue.</p>
 
         </div>
 
         <!-- sm view -->
         <div class="container text-xs-left p-t-3 hidden-md-up">
           <h2 class="title-small col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h2>
-          <p class="lead col-md-8 p-l-0"> I am a motivated graphic designer with skills in UI and UX design and motion graphics with over 6 year’s industry experience in an agency environment.<br><samp>As well as design I like to play with code includeing HTML, CSS, JavaScript and Swift.</samp><br>I spend alot of my spare time screen printing you can see some examples of my prints on <a href="http://www.instagram.com/cutoutandoverboard">Instagram</a> and you can follow my day to day life on <a href="http://www.twitter.com/termminaidan">Twitter.</a></p>
+          <p class="lead col-md-8 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis semper est, sed tincidunt arcu. Aliquam sodales mauris ac mollis pellentesque. Integer tincidunt lacus eu ullamcorper ornare. Maecenas eu ante vel augue pharetra pulvinar. Praesent lobortis luctus tellus at tincidunt. Sed molestie placerat ornare. <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel orci accumsan lectus porta laoreet vel eu felis. In at libero sapien. Integer a sem eget magna fringilla molestie eget sit amet orci. <br>Aenean elit risus, pellentesque in sagittis eu, auctor sed nunc. Curabitur id mi augue.</p>
         </div>
 
 
@@ -65,6 +59,7 @@
 
 
 <!-- projects -->
+    <div class="container" >
       <div id="projects" class="row">
         <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
           <ol class="carousel-indicators">
@@ -94,7 +89,7 @@
         </div>
 
       </div>
-    <div class="container" >
+
 <!-- /projects -->
 <!-- footer -->
       <div class="footer">
