added the client logos

--- a/about/index.html
+++ b/about/index.html
@@ -66,12 +66,12 @@
     <div class="container" >
 <!-- projects -->
       <div id="projects" class="row">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_01.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_02.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_03.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_04.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_05.png">
-        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_06.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_axa.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_bbc.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_nhs.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_srm.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_virgin.png">
+        <img class="col-xs-4 col-sm-2 p-b-2 img-rounded" src="../img/client_volvo.png">
 
       </div>
 <!-- /projects -->
