added new project screens

--- a/axa-mha/index.html
+++ b/axa-mha/index.html
@@ -5,61 +5,73 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Aidan Walker || UI/UX Designer</title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/custom.css">
+    <link rel="stylesheet" href="css/project.css">
   </head>
-  <body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
+  <body>
 <!-- Navigation -->
-
-<nav class="navbar navbar-dark navbar-fixed-top bg-inverse">
-  <div class="container">
-    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
-      &#9776;
-    </button>
-    <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-      <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Back</a>
-        </li>
-        <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
-      </ul>
-    </div>
-  </div>
-</nav>>
-
-<!-- /Navigation -->
-
-<!-- Hero Banner -->
-
-    <div class="about-hero">
-      <div class="jumbotron jumbotron-fluid vertical-center m-b-0">
-        <!-- medium view -->
-        <div class="container text-xs-left p-t-3 hidden-sm-down">
-          <h1 class="display-3 col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h1>
-          <p class="lead col-md-8 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis semper est, sed tincidunt arcu. Aliquam sodales mauris ac mollis pellentesque. Integer tincidunt lacus eu ullamcorper ornare. Maecenas eu ante vel augue pharetra pulvinar. Praesent lobortis luctus tellus at tincidunt. Sed molestie placerat ornare. <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel orci accumsan lectus porta laoreet vel eu felis. In at libero sapien. Integer a sem eget magna fringilla molestie eget sit amet orci. <br>Aenean elit risus, pellentesque in sagittis eu, auctor sed nunc. Curabitur id mi augue.</p>
-
+    <nav class="navbar navbar-light navbar-fixed-top bg-faded">
+      <div class="container">
+        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+          &#9776;
+        </button>
+        <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a> <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about/">About</a>
+            </li>
+            <a class="navbar-brand pull-sm-right m-r-0 hidden-xs-down" href="#home">Aidan Walker || UI/UX Designer</a>
+          </ul>
         </div>
+      </div>
+    </nav>
+<!-- /navigation -->
 
-        <!-- sm view -->
-        <div class="container text-xs-left p-t-3 hidden-md-up">
-          <h2 class="title-small col-sm-12 p-l-0 p-b-2">AXA - <br>Mobile Health Application</h2>
-          <p class="lead col-md-8 p-l-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis semper est, sed tincidunt arcu. Aliquam sodales mauris ac mollis pellentesque. Integer tincidunt lacus eu ullamcorper ornare. Maecenas eu ante vel augue pharetra pulvinar. Praesent lobortis luctus tellus at tincidunt. Sed molestie placerat ornare. <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel orci accumsan lectus porta laoreet vel eu felis. In at libero sapien. Integer a sem eget magna fringilla molestie eget sit amet orci. <br>Aenean elit risus, pellentesque in sagittis eu, auctor sed nunc. Curabitur id mi augue.</p>
-        </div>
+<!-- header -->
 
-
-
-
+<div class="hero">
+    <div class="jumbotron jumbotron-fluid m-b-0 vertical-center">
+      <div class="container">
+        <h1 class="display-3 p-t-3 text-xs-center">Client Name</h1>
+        <p class="lead text-xs-center">Project Name</p>
       </div>
     </div>
-<!-- /Hero Banner -->
-<!-- container -->
+</div>
+<!-- /header -->
+<!-- project description -->
 
+    <div class="container">
 
-<!-- projects -->
-    <div class="container" >
+        <div class="row p-b-3 p-t-2">
+          <div class="m-t-2 col-sm-6">
+            <h4 class="p-b-1">project heading</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eleifend sagittis nunc, dignissim posuere dui feugiat vel. Sed quis nibh eu lacus bibendum volutpat. Vivamus vestibulum ut purus a interdum. Donec ac pellentesque turpis. Mauris diam purus, tincidunt vel accumsan et, consectetur et dolor. Pellentesque dui odio, hendrerit ac porta sed, placerat id justo. Praesent ut risus lacus. Aenean ultrices nisi non congue luctus. </p>
+         </div>
+
+         <div class="m-t-2 col-sm-6 col-md-4 col-md-offset-2">
+           <h4 class="p-b-1">My role on the project:</h4>
+           <ul>
+             <li>Phasellus iaculis neque</li>
+             <li>Purus sodales ultricies</li>
+             <li>Vestibulum laoreet porttitor sem</li>
+             <li>Ac tristique libero volutpat at</li>
+           </ul>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="container-fluid" >
       <div id="projects" class="row">
         <div id="carousel-example-generic" class="carousel slide " data-ride="carousel">
           <ol class="carousel-indicators">
@@ -69,13 +81,13 @@
           </ol>
           <div class="carousel-inner  m-r-0" role="listbox">
             <div class="carousel-item active">
-              <img class="img-fluid full-width" src="../img/car_01.jpg" alt="First slide">
+              <img class="img-fluid full-width" src="img/car_01.png" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="img-fluid full-width" src="../img/car_02.jpg" alt="Second slide">
+              <img class="img-fluid full-width" src="img/car_02.png" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="img-fluid full-width" src="../img/car_03.jpg" alt="Third slide">
+              <img class="img-fluid full-width" src="img/car_03.png" alt="Third slide">
             </div>
           </div>
           <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -89,22 +101,20 @@
         </div>
 
       </div>
-
-<!-- /projects -->
-<!-- footer -->
-      <div class="footer">
-        <div class="jumbotron jumbotron-fluid">
-          <div class="container">
-            <h5 class="contact p-b-2">Give me a shout!</h5>
-            <p class="lead email"><a href="mailto:aidanftwalker@googlemail.com?Subject=Hello%20again" target="_top">aidanftwalker@gmail.com</a></p>
-
-            <button type="button" class="btn btn-info-outline pull-right">Download CV</button>
-          </div>
+  <!-- /project documenttation -->
+  <div class="footer">
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <div class="email col-sm-6">
+          <h5 class="contact p-b-2">Give me a shout!</h5>
+          <p class="lead email "><a href="mailto:aidanftwalker@googlemail.com?Subject=Hello%20again" target="_top">aidanftwalker@gmail.com</a></p>
         </div>
+        <button type="button" class="btn btn-info-outline pull-sm-right">Download CV</button>
       </div>
-<!-- /footer -->
     </div>
-<!-- /container -->
+  </div>
+
+
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
