added link and removed redundant href tag

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="col-md-4">
 
           <div class="card">
+            <a href="/axa-mha/">
             <img class="card-img img-fluid" src="img/proj_001.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
               <h4 class="card-title">Mobile Health App</h4>
@@ -79,7 +80,7 @@
 
           <div class="card">
             <a href="http://www.google.co.uk">
-            <img class="card-img img-fluid" src="img/proj_002.jpg" alt="Card image" width="100%" href>
+            <img class="card-img img-fluid" src="img/proj_002.jpg" alt="Card image" width="100%">
             <div class="card-img-overlay">
               <h4 class="card-title">Site Diary</h4>
               <h4 class="card-sub-title">Sir Robert McAlpine</h4>
