Added the fixed header

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <h5 class="contact p-b-2">Give me a shout!</h5>
               <p class="lead email "><a href="mailto:aidanftwalker@googlemail.com?Subject=Hello%20again" target="_top">aidanftwalker@gmail.com</a></p>
             </div>
-            <a type="button" class="btn btn-info-outline pull-sm-right" href="https://www.dropbox.com/s/58xr2iu89e8grjs/Aidan_Walker_CV.pdf?dl=0">Download CV</a>
+            <a type="button" class="btn btn-info-outline pull-sm-right">Download CV</a>
           </div>
         </div>
       </div>
