changed height to min height so it works on all devices.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!-- Hero Banner -->
     <div class="home-hero">
       <div class="jumbotron jumbotron-fluid vertical-center m-b-0">
-        <div class="container">
-          <h1 class="display-3 hero-heading-lg col-lg-6 p-t-3">Aidan Walker<br>UI/UX Designer </h1>
+        <div class="container p-t-3">
+          <h1 class="display-3 hero-heading-lg col-lg-6 ">Aidan Walker<br>UI/UX Designer </h1>
           <p class="lead hero-lead-lg col-lg-7 p-t-2">Designer living in Sheffield, specialising in creating web and mobile interfaces that are pleasing on the eye and simple to use.<br>Currently Senior UI / UX Designer at System Concepts.</p>
         </div>
       </div>
@@ -51,7 +51,7 @@
     <!-- projects -->
       <div id="projects" class="row p-t-2">
 
-        <div class="col-md-6 card-feature">
+        <div class="col-xs-6 card-feature">
 
           <div class="card">
             <img class="card-img img-fluid" src="img/img-home-srm.png" alt="Card image" width="100%">
