--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="/about">About</a>
             </li>
             <a class="navbar-brand pull-sm-right hidden-xs-down" href="#">Aidan Walker || UI/UX Designer</a>
           </ul>
