--- a/about/index.html
+++ b/about/index.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
 
           <ul class="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home </a>
-            </li>
             <li class="nav-item">
+              <a class="nav-link" href="/">Home </a>
+            </li>
+            <li class="nav-item active">
               <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
             </li>
             <a class="navbar-brand pull-sm-right hidden-xs-down" href="#">Aidan Walker || UI/UX Designer</a>
